fix: Increased size of planet index to make planets over 10 visible

--- a/client/src/styles/session/GalaxyPlanet.css
+++ b/client/src/styles/session/GalaxyPlanet.css
@@ -61,7 +61,7 @@
 }
 
 .galaxy_planet_1 {
-  width: 10px;
+  width: 20px;
 }
 
 .galaxy_planet_2 {
